src/objects/CRF__c.object
<CustomObject>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label_Name__c</fullName>
        <label>Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>CRFs</relationshipLabel>
        <relationshipName>CRFs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration</label>
        <referenceTo>Registration__c</referenceTo>
        <relationshipLabel>CRFs</relationshipLabel>
        <relationshipName>CRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>CRFs</relationshipLabel>
        <relationshipName>CRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>CRFs</relationshipLabel>
        <relationshipName>CRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>CRFs</relationshipLabel>
        <relationshipName>CRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_CRF_Id__c</fullName>
        <label>pg_CRF_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CRF</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CRF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRFs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>